# clock

./: .gitignore  README.md  work_clock.sln
work_clock/: CMakeLists.txt  clock_face.cpp  clock_face.hpp  hand.cpp  hand.hpp  help_function.cpp  help_function.hpp  main.cpp  main.h  main.hpp  work_clock.filters  work_clock.vcxproj
work_clock/dll_files/: CMakeLists.txt
work_clock/sdl_test/x64/Debug/: sdl_test.exe.recipe  sdl_test.ilk  vc143.idb
work_clock/sdl_test/x64/Debug/sdl_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  sdl_test.lastbuildstate
work_clock/work_clock/x64/Debug/: vc143.idb  work_clock.exe.recipe
work_clock/work_clock/x64/Debug/work_clock.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  work_clock.lastbuildstate
work_clock/x64/Debug/: sdl_test.exe.recipe  sdl_test.ilk  sdl_test.vcxproj.FileListAbsolute.txt  vc143.idb  work_clock.exe.recipe  work_clock.ilk  work_clock.vcxproj.FileListAbsolute.txt
work_clock/x64/Debug/sdl_test.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  sdl_test.lastbuildstate
work_clock/x64/Debug/work_clock.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog  work_clock.lastbuildstate
